newspaper view/upload